--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <input type="submit" value="Search" id="ghsubmitbtn"></input>
     
     <div id="ghapidata"></div>
+    <br>
+    <div id="pages" class="hidden">
+      <input type="submit" value="First" id="first" disabled></input>
+      <input type="submit" value="Prev" id="prev" disabled></input>
+      <input type="submit" value="Next" id="next" disabled></input>
+      <input type="submit" value="Last" id="last" disabled></input>
+    </div>
   
 <script type="text/javascript" src="scripts/main.js"></script>
 
